@@ -34,6 +34,30 @@ name|util
 operator|.
 name|concurrent
 operator|.
+name|ExecutionException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|Future
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
 name|TimeUnit
 import|;
 end_import
@@ -104,7 +128,7 @@ name|solr
 operator|.
 name|cloud
 operator|.
-name|RecoveryStrategy
+name|ActionThrottle
 import|;
 end_import
 
@@ -118,7 +142,7 @@ name|solr
 operator|.
 name|cloud
 operator|.
-name|ActionThrottle
+name|RecoveryStrategy
 import|;
 end_import
 
@@ -369,6 +393,11 @@ DECL|field|recoveryStrat
 specifier|private
 name|RecoveryStrategy
 name|recoveryStrat
+decl_stmt|;
+DECL|field|future
+specifier|private
+name|Future
+name|future
 decl_stmt|;
 DECL|field|lastReplicationSuccess
 specifier|private
@@ -1307,10 +1336,20 @@ argument_list|(
 name|recoveringAfterStartup
 argument_list|)
 expr_stmt|;
-name|recoveryStrat
+name|future
+operator|=
+name|cc
 operator|.
-name|start
+name|getUpdateShardHandler
 argument_list|()
+operator|.
+name|getUpdateExecutor
+argument_list|()
+operator|.
+name|submit
+argument_list|(
+name|recoveryStrat
+argument_list|)
 expr_stmt|;
 name|recoveryRunning
 operator|=
@@ -1361,9 +1400,9 @@ condition|)
 block|{
 try|try
 block|{
-name|recoveryStrat
+name|future
 operator|.
-name|join
+name|get
 argument_list|()
 expr_stmt|;
 block|}
@@ -1375,6 +1414,14 @@ parameter_list|)
 block|{
 comment|// not interruptible - keep waiting
 continue|continue;
+block|}
+catch|catch
+parameter_list|(
+name|ExecutionException
+name|e
+parameter_list|)
+block|{
+break|break;
 block|}
 break|break;
 block|}
